--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 
     <header>
       <nav class="navbar navbar-default navbar-top navbar-fixed-top clearfix">
-        <div class="container-fluid">
+        <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header clearfix">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -57,7 +57,7 @@
               </li> -->
             </ul>
           </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+        </div><!-- /.container -->
       </nav>
     </header>
 
