--- a/products.html
+++ b/products.html
@@ -16,6 +16,7 @@
     <!-- owl -->
     <link rel="stylesheet" href="ide/OwlCarousel2-2.3.3/dist/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="ide/OwlCarousel2-2.3.3/dist/assets/owl.theme.green.min.css">
+<link href="http://themes.startbootstrap.com/vitality-v2.1.0/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
     <!-- 修改內容 -->
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -24,7 +25,7 @@
 
     <header>
       <nav class="navbar navbar-default navbar-top navbar-fixed-top">
-        <div class="container-fluid">
+        <div class="container">
           <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
@@ -59,7 +60,7 @@
               </li> -->
             </ul>
           </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+        </div><!-- /.container -->
       </nav>
     </header>
 
@@ -198,5 +199,5 @@
 
 <!-- owl -->
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
-
+<script src="http://themes.startbootstrap.com/vitality-v2.1.0/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 <script src="js/main.js"></script>
