1.scroll to top 2.fix field

--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>contact阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
+    <!-- seo -->
+    <meta name="description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 沉香之傳承聯手 打造台灣養身保健產業將沉香面紗緩緩揭開創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(03) 923-2471">
+    <meta name="author" content="元福聯合科技股份有限公司">
+    <link rel="icon" href="#">
 
+    <meta property="og:title" content="阿蘭城休閒農場 - 宜蘭休閒農場" >
+    <meta property="og:description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(02)8792-9970" >
+    <meta property="og:type" content="website" >
+    <meta property="og:url" content="http://">
+    <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
+    <!-- seo end -->
+    <title>contact阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
     <!-- icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- 修改內容 -->
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -43,18 +50,6 @@
               <li><a href="products.html">商品一覽</a></li>
               <li><a href="form.html">報名表</a></li>
               <li class="active"><a href="contact.html">與我聯繫</a></li>
-              <!-- <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li> -->
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
@@ -71,26 +66,38 @@
         <div class="text-center">
           <h2>聯絡我們</h2>
           <hr class="colored">
-          <!-- <p>Please tell us about your next project and we will let you know what we can do to help you.</p> -->
-          <h2>想進一步瞭解a-lan-chen產品、服務，<br/>或有任何寶貴意見，都歡迎您與我們聯繫<br/>，我們將竭誠為您服務!</h2>
-          <p>快於下方點擊，歡迎來信字樣，就可以聯絡到我們喔～～<br>別猶豫了～～～別猶豫了～～～快點點擊我ＲＲＲＲＲＲＲＲ</p>
+          <h3>想進一步瞭解a-lan-chen產品、服務，<br/>或有任何寶貴意見，都歡迎您與我們聯繫<br/>，我們將竭誠為您服務!</h3>
         </div>
-        <div class="container mt-4 container-button">
-          <div class="">
-            <div class="">
+
+
+        <div class="container container-button">
+          <div class="row">
+            <!-- <div class="clearfix"> -->
+            <div class="image-farm">
               <button type="button" class="btn btn-default btn-lg btn-block">
                 <a href="mailto:georgia.wang@genesys-tech.com" class="btn btn-secondary" style="width:100%; color:#000; outline:none;">歡迎來信</a>
               </button>
             </div>
+            <!-- </div> -->
           </div>
         </div>
+
+
+
+        <div class="row">
+          <div class="image-farm col-md-12 text-center">
+              <img src="imgs/IMG_0476.jpg" alt="農場介紹地圖">
+          </div>
+        </div>
+
       </div>
+
     </section>
 
 
 
 
-    <section class="page-section pricing" id="locations" style="background-image: url('img/legal/backgrounds/bg-locations.jpg')">
+    <section class="page-section pricing bg-light" id="locations" style="background-image: url('img/legal/backgrounds/bg-locations.jpg')">
       <div class="container wow fadeIn">
         <div class="text-center">
           <h2>地點</h2>
@@ -98,43 +105,9 @@
           <!-- <p>歡迎蒞臨本農場，有空歡迎來走走，這邊很多各式各樣體驗等您來體驗。</p> -->
         </div>
         <div class="row">
-          <!-- Pricing Table 1 -->
-          <!-- <div class="col-lg-4 col-sm-12">
-            <div class="pricing-item">
-              <h3>阿黎是企業有限公司</h3>
-              <p>如需購買沉香相關產品請洽</p>
-              <hr class="colored">
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <div class="w-100">
-                    <span>營業時間:</span>
-                  </div>
-                  <div class="w-100">Mon - Fri <br>11:00am to 19:00pm</div>
-                  <div class="w-100">Sat - Sun <br>11:00am to 21:00pm</div>
-                </li>
-                <li class="list-group-item">
-                  <div class="w-100">
-                    <span>聯絡電話:</span>
-                  </div>
-                  <div class="w-100">電話 02-2223-2022</div>
-                  <div class="w-100">專線 886+ 918-296-945 </div>  
-                </li>
-                <li class="list-group-item">
-                  <div class="w-100">
-                    <span>地址:</span>
-                  </div>
-                  <div class="w-100">宜蘭縣員山鄉同樂村蘭城路48號</div>
-                  <div class="w-100">No.48 Lancheng Road, Tongle Village, Yuanshan Township, Yilan County</div>
-                </li>
-                <li class="list-group-item">
-                  <div class="w-100">粉絲團:阿黎是沉香會館 - 木之真丹</div>
-                </li>
-              </ul>
-            </div>
-          </div> -->
           <!-- Pricing Table 2 -->
           <div class="col-lg-4 col-sm-12">
-            <div class="pricing-item">
+            <div class="pricing-item text-center">
               <h3>阿蘭城休閒農場</h3>
               <p>採預約制</p>
               <hr class="colored">
