--- a/course.html
+++ b/course.html
@@ -4,15 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- seo -->
+    <meta name="description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 沉香之傳承聯手 打造台灣養身保健產業將沉香面紗緩緩揭開創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(03) 923-2471">
+    <meta name="author" content="元福聯合科技股份有限公司">
+    <link rel="icon" href="#">
+
+    <meta property="og:title" content="阿蘭城休閒農場 - 宜蘭休閒農場" />
+    <meta property="og:description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(02)8792-9970" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://" />
+    <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
+    <!-- seo end -->
     <title>course阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-
     <!-- icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- 修改內容 -->
+    
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -41,20 +50,9 @@
               <li><a href="products.html">商品一覽</a></li>
               <li><a href="form.html">報名表</a></li>
               <li><a href="contact.html">與我聯繫</a></li>
-              <!-- <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li> -->
             </ul>
           </div><!-- /.navbar-collapse -->
+
         </div><!-- /.container -->
       </nav>
     </header>
@@ -62,90 +60,86 @@
 
 
 
+    <!-- course Section -->
+    <section class="section page-section" id="course">
+      <div class="container text-center lession_icon">
+        <div class="row course-center-vertical">
 
-
-    <!-- Process Section -->
-    <section class="page-section" id="about">
-          <div class="container text-center lession_icon" >
-            <div class="text-center wow fadeIn">
-              <h2>課程</h2>
-              <hr class="colored">
-            </div>
-            <div class="row mt-4">
-              <!-- Service Item 1 -->
-              <div class="col-lg-4 wow fadeIn" data-wow-delay=".2s">
-                <div class="media">
-                  <div class="pull-left icon_circle">
-                    <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
-                  </div>
-                  <div class="media-body">
-                    <h3 class="media-heading">梅門文化公益講堂</h3>
-                    <ul>
-                      <li>日期：2017.4.9 (日)</li>
-                      <li>A時間：上午10:30~12:00（敬請提早入席）</em></li>
-                      <li>地點：梅門台北西門館</li>
-                      <li>地址：台北市延平南路85號3樓</li>
-                      <li>02-23315008服務組</li>
-                      <li>0935-126-095鄭榮珍師姐</li>
-                    </ul>
-                    <p><a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/"><b>詳閱內文</b></a></p>
-                  </div>
-                </div>
+        <div class="text-center wow fadeIn">
+          <h2>課程</h2>
+          <hr class="colored">
+        </div>
+        <div class="row">
+          <!-- course Item 1 -->
+          <div class="col-lg-4 wow fadeIn" data-wow-delay=".2s">
+            <div class="media">
+              <div class="pull-left icon_circle">
+                <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
               </div>
-              <!-- Service Item 2 -->
-              <div class="col-lg-4 wow fadeIn" data-wow-delay=".4s">
-                <div class="media">
-                  <div class="pull-left icon_circle">
-                    <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
-                  </div>
-                  <div class="media-body">
-                    <h3 class="media-heading">梅門文化公益講堂</h3>
-                    <ul>
-                      <li>日期：2017.4.9 (日)</li>
-                      <li>A時間：上午10:30~12:00（敬請提早入席）</em></li>
-                      <li>地點：梅門台北西門館</li>
-                      <li>地址：台北市延平南路85號3樓</li>
-                      <li>02-23315008服務組</li>
-                      <li>0935-126-095鄭榮珍師姐</li>
-                    </ul>
-                    <p><a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/"><b>詳閱內文</b></a></p>
-                  </div>
-                </div>
-              </div>
-              <!-- Service Item 3 -->
-              <div class="col-lg-4 wow fadeIn" data-wow-delay=".6s">
-                <div class="media">
-                  <div class="pull-left icon_circle">
-                    <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
-                  </div>
-                  <div class="media-body">
-                    <h3 class="media-heading">梅門文化公益講堂</h3>
-                    <ul>
-                      <li>日期：2017.4.9 (日)</li>
-                      <li>A時間：上午10:30~12:00（敬請提早入席）</li>
-                      <li>地點：梅門台北西門館</li>
-                      <li>地址：台北市延平南路85號3樓</li>
-                      <li>02-23315008服務組</li>
-                      <li>0935-126-095鄭榮珍師姐</li>
-                    </ul>
-                    <p><a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/"><b>詳閱內文</b></a></p>
-                  </div>
-                </div>
+              <div class="media-body">
+                <h3 class="media-heading">梅門文化公益講堂</h3>
+                <ul>
+                  <li>日期：2017.4.9 (日)</li>
+                  <li>A時間：上午10:30~12:00（敬請提早入席）</em></li>
+                  <li>地點：梅門台北西門館</li>
+                  <li>地址：台北市延平南路85號3樓</li>
+                  <li>02-23315008服務組</li>
+                  <li>0935-126-095鄭榮珍師姐</li>
+                </ul>
+                <p><a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/"><b>詳閱內文</b></a></p>
               </div>
             </div>
           </div>
-        </section>
 
+          <!-- course Item 2 -->
+          <div class="col-lg-4 wow fadeIn" data-wow-delay=".4s">
+            <div class="media">
+              <div class="pull-left icon_circle">
+                <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
+              </div>
+              <div class="media-body">
+                <h3 class="media-heading">梅門文化公益講堂</h3>
+                <ul>
+                  <li>日期：2017.4.9 (日)</li>
+                  <li>A時間：上午10:30~12:00（敬請提早入席）</em></li>
+                  <li>地點：梅門台北西門館</li>
+                  <li>地址：台北市延平南路85號3樓</li>
+                  <li>02-23315008服務組</li>
+                  <li>0935-126-095鄭榮珍師姐</li>
+                </ul>
+                <p><a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/"><b>詳閱內文</b></a></p>
+              </div>
+            </div>
+          </div>
 
-      <!-- End About Me Section -->
+          <!-- course Item 3 -->
+          <div class="col-lg-4 wow fadeIn" data-wow-delay=".6s">
+            <div class="media">
+              <div class="pull-left icon_circle">
+                <i class="fa fa-user-plus rounded-circle" style="color:#000;"></i>
+              </div>
+              <div class="media-body">
+                <h3 class="media-heading">梅門文化公益講堂</h3>
+                <ul>
+                  <li>日期：2017.4.9 (日)</li>
+                  <li>A時間：上午10:30~12:00（敬請提早入席）</li>
+                  <li>地點：梅門台北西門館</li>
+                  <li>地址：台北市延平南路85號3樓</li>
+                  <li>02-23315008服務組</li>
+                  <li>0935-126-095鄭榮珍師姐</li>
+                </ul>
+                <p><a href="https://www.facebook.com/%E9%98%BF%E9%BB%8E%E6%98%AF%E6%B2%89%E9%A6%99%E6%9C%83%E9%A4%A8-%E6%9C%A8%E4%B9%8B%E7%9C%9F%E4%B8%B9-125467274322266/"><b>詳閱內文</b></a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><!-- row -->
+      </div>
+    </section>
+    <!-- End course Section -->
   
 
-
-
-
-
-
-        <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer foot-all">
       <div class="container text-center">
         <div class="row">
@@ -200,6 +194,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!-- owl -->
+<!-- owl plugin-->
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
