--- a/form.html
+++ b/form.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- seo -->
+    <meta name="description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 沉香之傳承聯手 打造台灣養身保健產業將沉香面紗緩緩揭開創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(03) 923-2471">
+    <meta name="author" content="元福聯合科技股份有限公司">
+    <link rel="icon" href="#">
+
+    <meta property="og:title" content="阿蘭城休閒農場 - 宜蘭休閒農場" />
+    <meta property="og:description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(02)8792-9970" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://" />
+    <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
+    <!-- seo end -->
     <title>form阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
 
 
@@ -77,13 +88,10 @@
       </div>
     </section>
 
-
-
-
           
 
         
-        <!-- Footer -->
+    <!-- Footer -->
     <footer class="footer foot-all">
       <div class="container text-center">
         <div class="row">
