--- a/products.html
+++ b/products.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- seo -->
+    <meta name="description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 沉香之傳承聯手 打造台灣養身保健產業將沉香面紗緩緩揭開創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(03) 923-2471">
+    <meta name="author" content="元福聯合科技股份有限公司">
+    <link rel="icon" href="#">
+
+    <meta property="og:title" content="阿蘭城休閒農場 - 宜蘭休閒農場" />
+    <meta property="og:description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(02)8792-9970" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://" />
+    <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
+    <!-- seo end -->
     <title>products阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
 
 
@@ -13,8 +24,9 @@
     <!-- icon -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <!-- owl -->
+    <!-- owl plugin-->
     <link rel="stylesheet" href="ide/OwlCarousel2-2.3.3/dist/assets/owl.carousel.min.css">
+    <!-- products slider plugin -->
     <link rel="stylesheet" href="ide/OwlCarousel2-2.3.3/dist/assets/owl.theme.green.min.css">
 <link href="http://themes.startbootstrap.com/vitality-v2.1.0/vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
     <!-- 修改內容 -->
@@ -46,18 +58,6 @@
               <li class="active"><a href="products.html">商品一覽</a></li>
               <li><a href="form.html">報名表</a></li>
               <li><a href="contact.html">與我聯繫</a></li>
-              <!-- <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">Separated link</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li> -->
             </ul>
           </div><!-- /.navbar-collapse -->
         </div><!-- /.container -->
@@ -68,58 +68,81 @@
 
 
 
-
-
-
     
-    <!-- Collection Gallery -->
-    <section class="page-section bg-light" id="collections">
+    <!-- products Gallery -->
+    <section class="page-section" id="collections">
         <div class="container wow fadeIn slider-area">
           <div class="text-center">
             <h2>商品一覽</h2>
             <hr class="colored">
-
           </div>
           <div class="portfolio-gallery owl-carousel owl-theme  owl-loaded slider-active">
-            <div class="item">
+
+            <div class="box item">
               <a href="https://www.facebook.com/125467274322266/photos/a.146693355532991.1073741826.125467274322266/159820207553639/?type=3&theater" class="gallery-link" title="alishih 香皂fb">
-                <img src="https://scontent.ftpe7-4.fna.fbcdn.net/v/t1.0-9/545216_159820207553639_48702722_n.jpg?_nc_fx=ftpe7-3&_nc_cat=0&oh=140774ef9a29144574c22981a17a7857&oe=5B279F98" class="img-fluid mx-auto" alt="alishih 香皂照片">
+                <img src="https://scontent.ftpe7-4.fna.fbcdn.net/v/t1.0-9/545216_159820207553639_48702722_n.jpg?_nc_fx=ftpe7-3&_nc_cat=0&oh=140774ef9a29144574c22981a17a7857&oe=5B279F98" class="img-fluid mx-auto" alt="1">
               </a>
             </div>
-            <div class="item">
+
+            <div class="box item">
               <a href="http://www.books.com.tw/products/0010727672" class="gallery-link" title="木之真丹:沉香：阿黎是-中華民族香道">
-                <img src="http://www.cite.com.my/images/p_download/524745.jpg" class="img-fluid mx-auto" alt="木之真丹:沉香：阿黎是-中華民族香道照片">
+                <img src="http://www.cite.com.my/images/p_download/524745.jpg" class="img-fluid mx-auto" alt="2">
               </a>
             </div>
-            <div class="item">
-              <a href="imgs/S__128606211.jpg" class="gallery-link" title="Casual Collection">
-                <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="3">
-              </a>
+
+            <div class="box item">
+              <div class="pic">
+                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="3">
+                </a>
+              </div>
+              <div class="txt">
+                <p class="product-txtColor">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
+              </div>
             </div>
-            <div class="item">
-              <a href="imgs/S__128606211.jpg" class="gallery-link" title="Evening Bag">
-                <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="4">
-              </a>
+
+            <div class="box item">
+              <div class="pic">
+                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="4">
+                </a>
+              </div>
+              <div class="txt">
+                <p class="product-txtColor">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
+              </div>
             </div>
-            <div class="item">
-              <a href="imgs/S__128606211.jpg" class="gallery-link" title="Earthy Wrap">
-                <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="5">
-              </a>
+
+            <div class="box item">
+              <div class="pic">
+                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="5">
+                </a>
+              </div>
+              <div class="txt">
+                <p class="product-txtColor">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
+              </div>
             </div>
-            <div class="item">
-              <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="6">
-              </a>
+
+            <div class="box item">
+              <div class="pic">
+                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="6">
+                </a>
+              </div>
+              <div class="txt">
+                <p class="product-txtColor">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
+              </div>
             </div>
-            <div class="item">
-              <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="7">
-              </a>
-            </div>
-            <div class="item">
-              <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
-                <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="8">
-              </a>
+
+            <div class="box item">
+              <div class="pic">
+                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="7">
+                </a>
+              </div>
+              <div class="txt">
+                <p class="product-txtColor">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
+              </div>
             </div>
 
             <div class="box item">
@@ -129,15 +152,24 @@
                 </a>
               </div>
               <div class="txt">
-                <p>	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
+                <p class="product-txtColor">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
+              </div>
+            </div>
+
+            <div class="box item">
+              <div class="pic">
+                <a href="imgs/S__128606211.jpg" class="gallery-link" title="Boots and Polka Dots">
+                  <img src="imgs/S__128606211.jpg" class="img-fluid mx-auto" alt="9">
+                </a>
+              </div>
+              <div class="txt">
+                <p class="product-txtColor">	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum, voluptatibus!Lorem Lorem ipsum</p>
               </div>
             </div>
 
           </div>
         </div>
-      </section>
-
-
+    </section><!-- products Gallery -->
 
 
 
@@ -193,11 +225,27 @@
 </html>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-<!-- owl -->
+<!-- owl plugin-->
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
+<!-- products slider plugin -->
 <script src="http://themes.startbootstrap.com/vitality-v2.1.0/vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+
 <script src="js/main.js"></script>
+
+
+
+<!-- 這外掛會影響其他程式撰寫,內容會被覆蓋過去 -->
+<script>
+  // Magnific Popup jQuery Lightbox Gallery Settings
+  $('.gallery-link').magnificPopup({
+    type: 'image',
+    gallery: {
+        enabled: true
+    },
+    image: {
+        titleSrc: 'title'
+    }
+  });
+</script>
