--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- seo -->
+    <meta name="description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 沉香之傳承聯手 打造台灣養身保健產業將沉香面紗緩緩揭開創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(03) 923-2471">
+    <meta name="author" content="元福聯合科技股份有限公司">
+    <link rel="icon" href="#">
+
+    <meta property="og:title" content="阿蘭城休閒農場 - 宜蘭休閒農場" />
+    <meta property="og:description" content="阿蘭城休閒農場 ( A Lan Chen Farm ) 創立研究沉香技術中心，並集合養身概念，推廣文化香道的理想目標。(02)8792-9970" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://" />
+    <meta property="og:image" content="http://www.genesys-tech.com/img/ogimage.jpg" />
+    <!-- seo end -->
+
     <title>index阿蘭城休閒農場Ａ-Lan-Chen Farm</title>
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700" rel="stylesheet">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
     <!-- 修改內容 -->    
     <link rel="stylesheet" href="css/main.css">
-
-    <!-- <link rel="stylesheet" href="http://www.luobotetian.com/css/style.css"> -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css"> -->
 </head>
 
 <body>
@@ -47,75 +55,28 @@
   </nav>
 </header>
 
-
-
-
-    <!-- Start Nav Section -->
-    <!-- <nav id="navbar" class="navbar">
-      <ul class="nav-menu">
-        <li>
-          <a data-scroll="home" href="#home" class="dot active">
-            <span>Home</span>
-          </a>
-        </li>
-        <li>
-          <a data-scroll="about" href="#about" class="dot">
-            <span>About me</span>
-          </a>
-        </li>
-        <li>
-          <a data-scroll="services" href="#services" class="dot">
-            <span>Services</span>
-          </a>
-        </li>
-        <li>
-          <a data-scroll="test" href="#test" class="dot">
-            <span>Testimonials</span>
-          </a>
-        </li>
-        <li>
-          <a data-scroll="contact" href="#contact" class="dot">
-            <span>Contact</span>
-          </a>
-        </li>
-      </ul>
-    </nav> -->
-    <!-- End Nav Section -->
-
-    <!-- advantage -->
-    <section id="sh" class="appear abouthome">
-        <div class="container-fluid">
-            <div class="row">
-                <!-- home-top -->
-                <img src="http://image5.tuku.cn/wallpaper/Landscape%20Wallpapers/8294_2560x1600.jpg" class="animation103 center-block animated fadeInUp img-responsive" style="width:100%; height:100vh;">
-            </div>
-        </div>
-        <!-- <div id="mice"> -->
-            <!-- <a href="#section-introduction" class="smooth">
-                <div>
-                    <span class="unu"></span>
-                    <span class="doi"></span>
-                </div>
-            </a> -->
-        <!-- </div> -->
-    </section>
-
-    <!-- Start Contact Section -->
-    <section id="content" class="contact-f">
-      <div class="container">
-        <div class="text-center content_bgc">
-          <div class="cont">
-            <h2 style="color:#fff;">聯繫我們</h2>
-            <p style="color:#fff;">想進一步瞭解A-LAN-CHEN產品、服務，或有任何寶貴意見，都歡迎您與我們聯繫，我們將竭誠為您服務！</p>
-            <p class="mail" style="color:#fff; text-transform: none;">電話專線：886+ 933-128-349</p>
-          </div>
-        </div>
+<!-- 全版圖首頁畫面 -->
+<section id="sh" class="appear abouthome">
+  <div class="container-fluid">
+      <div class="row">
+          <img src="https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-369259.jpg" class="animation103 center-block animated fadeInUp img-responsive" style="width:100%; height:100vh;">
       </div>
-    </section>
-    <!-- End Contact Section -->
+  </div>
+</section>
 
-
-
+<!-- Start Contact Section -->
+<section id="content" class="contact-f">
+  <div class="container">
+    <div class="text-center content_bgc">
+      <div class="cont">
+        <h2 style="color:#fff;">聯繫我們</h2>
+        <p style="color:#fff;">想進一步瞭解A-LAN-CHEN產品、服務，或有任何寶貴意見，都歡迎您與我們聯繫，我們將竭誠為您服務！</p>
+        <p class="mail" style="color:#fff; text-transform: none;">電話專線：886+ 933-128-349</p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End Contact Section -->
 
 
     
@@ -124,6 +85,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-<!-- owl -->
+<!-- owl plugin-->
 <script src="ide/OwlCarousel2-2.3.3/dist/owl.carousel.min.js"></script>
 <script src="js/main.js"></script>
