fix contact picture

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">阿蘭城休閒農場</a>
+        <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -104,7 +104,7 @@
               <h1>阿蘭城休閒農場</h1>
               <hr class="colored">
             </div>
-            <p>&emsp;&emsp;夫妻倆共同經手打拼。陳輝俊博士長年推廣綠色能源，是台灣綠色生產力基金會董事，因此格外重視環保議題，而陳熟吟女士更是台灣華文化香道協會理事長，推廣品香文化更是不遺餘力。年近七十歲他們，在事業有所成就後希望回饋故鄉宜蘭，因此特別設立阿蘭城休閒農場。<br>&emsp;&emsp;農場內種植數千顆沉香樹，樹已成林，園區內，園區內綠意盎然。致力於。致力於高經濟作物沉香樹推廣，歡迎種植沈香樹的香農，來交流種植、造香與香品應用。不定時系列香道（品香）、書道及慶生、書道及慶生之道活動，歡迎您偷得半日閒來一趟身心靈之旅。</p>
+            <p>&emsp;&emsp;夫妻倆共同經手打拼。陳輝俊博士長年推廣綠色能源，是台灣綠色生產力基金會董事，因此格外重視環保議題，而陳熟吟女士更是台灣華文化香道協會理事長，推廣品香文化更是不遺餘力。年近七十歲他們，在事業有所成就後希望回饋故鄉宜蘭，因此特別設立阿蘭城休閒農場。&emsp;&emsp;農場內種植數千顆沉香樹，樹已成林，園區內，園區內綠意盎然。致力於。致力於高經濟作物沉香樹推廣，歡迎種植沈香樹的香農，來交流種植、造香與香品應用。不定時系列香道（品香）、書道及慶生、書道及慶生之道活動，歡迎您偷得半日閒來一趟身心靈之旅。</p>
             <button><a href="#" >詳閱更多</a></button>
           </div>
         </div>  
@@ -117,7 +117,7 @@
 
 
   <!-- About Section -->
-  <section class="page-section bg-light" id="about">
+  <section class="page-section" id="about" style="background-color: #e9edf0;">
     <div class="container-fluid">
       <div class="row">
 
