--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="index.html">阿蘭城休閒農場</a>
+        <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
+        
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -69,7 +70,7 @@
   <div class="container">
     <div class="text-center content_bgc">
       <div class="cont">
-        <h2 style="color:#fff;">聯繫我們</h2>
+        <h3 style="color:#fff;">聯繫我們</h3>
         <p style="color:#fff;">想進一步瞭解A-LAN-CHEN產品、服務，或有任何寶貴意見，都歡迎您與我們聯繫，我們將竭誠為您服務！</p>
         <p class="mail" style="color:#fff; text-transform: none;">電話專線：886+ 933-128-349</p>
       </div>
