--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">阿蘭城休閒農場</a>
+            <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
@@ -59,50 +59,11 @@
 
 
 
-
-        <!-- Contact Section -->
-    <section class="container page-section contact-all" id="contact">
-      <div class="contact-row wow fadeIn">
-        <div class="text-center">
-          <h2>聯絡我們</h2>
-          <hr class="colored">
-          <h3>想進一步瞭解a-lan-chen產品、服務，<br/>或有任何寶貴意見，都歡迎您與我們聯繫<br/>，我們將竭誠為您服務!</h3>
-        </div>
-
-
-        <div class="container container-button">
-          <div class="row">
-            <!-- <div class="clearfix"> -->
-            <div class="image-farm">
-              <button type="button" class="btn btn-default btn-lg btn-block">
-                <a href="mailto:georgia.wang@genesys-tech.com" class="btn btn-secondary" style="width:100%; color:#000; outline:none;">歡迎來信</a>
-              </button>
-            </div>
-            <!-- </div> -->
-          </div>
-        </div>
-
-
-
-        <div class="row">
-          <div class="image-farm col-md-12 text-center">
-              <img src="imgs/IMG_0476.jpg" alt="農場介紹地圖">
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-
-
-
-
-    <section class="page-section pricing bg-light" id="locations" style="background-image: url('img/legal/backgrounds/bg-locations.jpg')">
+    <section class="page-section pricing" id="locations" style="background-image: url('img/legal/backgrounds/bg-locations.jpg')">
       <div class="container wow fadeIn">
         <div class="text-center">
           <h2>地點</h2>
           <hr class="colored">
-          <!-- <p>歡迎蒞臨本農場，有空歡迎來走走，這邊很多各式各樣體驗等您來體驗。</p> -->
         </div>
         <div class="row">
           <!-- Pricing Table 2 -->
@@ -181,6 +142,50 @@
       </div>
     </section>
   
+
+
+
+    <!-- Contact Section -->
+    <section class="page-section pricing contact-all" id="contact" style="background-color: #e9edf0;">
+    <!-- <section class="container page-section contact-all" id="contact"> -->
+        <div class="contact-row wow fadeIn">
+          <div class="text-center">
+            <h2>聯絡我們</h2>
+            <hr class="colored">
+            <h4>想進一步瞭解a-lan-chen產品、服務，<br/>或有任何寶貴意見，都歡迎您與我們聯繫<br/>，我們將竭誠為您服務!</h3>
+          </div>
+
+          <div class="contactUs">
+
+          
+          <div class="container-contact">
+            <a class="border-animation" href="mailto:georgia.wang@genesys-tech.com">
+              <div class="border-animation__inner">Welcome letter</div>
+            </a>
+          </div>
+
+          </div>
+          <!-- <div class="container container-button">
+            <div class="row">
+              <div class="image-farm">
+                <button type="button" class="btn btn-default btn-lg btn-block ">
+                  <a href="mailto:georgia.wang@genesys-tech.com" class="btn btn-secondary" style="width:100%; color:#000; outline:none;">歡迎來信</a>
+                </button>
+              </div>
+            </div>
+          </div> -->
+
+
+
+          <!-- <div class="row">
+            <div class="image-farm col-md-12 text-center">
+                <img src="imgs/IMG_0476.jpg" alt="農場介紹地圖">
+            </div>
+          </div> -->
+
+        </div>
+
+      </section>
 
 
 
