--- a/form.html
+++ b/form.html
@@ -42,7 +42,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="index.html">阿蘭城休閒農場</a>
+            <a class="navbar-brand logo-title" href="index.html">阿蘭城休閒農場</a>
           </div>
 
           <!-- Collect the nav links, forms, and other content for toggling -->
