contact me txt fix

--- a/contact.html
+++ b/contact.html
@@ -102,36 +102,7 @@
               </ul>
             </div>
           </div>
-          <!-- Pricing Table 3 -->
-          <!-- <div class="col-md-4">
-            <div class="pricing-item">
-              <h3>Downtown</h3>
-              <hr class="colored">
-              <ul class="list-group">
-                <li class="list-group-item">
-                  <div class="w-100">
-                    <em>Hours:</em>
-                  </div>
-                  <div class="w-100">Mon - Fri: 9:00am to 8:00pm</div>
-                  <div class="w-100">Sat - Sun: 11:00am to 11:00pm</div>
-                </li>
-                <li class="list-group-item">
-                  <div class="w-100">
-                    <em>Phone:</em>
-                  </div>
-                  <div class="w-100">474-555-5555</div>
-                </li>
-                <li class="list-group-item">
-                  <div class="w-100">
-                    <em>Address:</em>
-                  </div>
-                  <div class="w-100">74 Main St. Suite #2</div>
-                  <div class="w-100">Los Angeles, CA 49204</div>
-                </li>
-              </ul>
-            </div>
-          </div> -->
-          <!-- Pricing Table 3 -->
+
           <div class="col-lg-8 col-sm-12">
             <div class="pricing-item" style="height:100%;">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3622.733679581894!2d121.72828811518123!3d24.770318784096478!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3467e4ae08afe559%3A0x5d9a28611d7c832e!2zMjY05a6c6Jit57ij5ZOh5bGx6YSJ6Jit5Z-O6LevNDjomZ8!5e0!3m2!1szh-TW!2stw!4v1521538116074" width="100%" height="475" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -146,13 +117,12 @@
 
 
     <!-- Contact Section -->
-    <section class="page-section pricing contact-all" id="contact" style="background-color: #e9edf0;">
-    <!-- <section class="container page-section contact-all" id="contact"> -->
-        <div class="contact-row wow fadeIn">
+    <section class="page-section pricing contact-all" id="contact" style="background-color: #e9edf0; ">
+        <div class="container-fluid contact-row wow fadeIn">
           <div class="text-center">
             <h2>聯絡我們</h2>
             <hr class="colored">
-            <h4>想進一步瞭解a-lan-chen產品、服務，<br/>或有任何寶貴意見，都歡迎您與我們聯繫<br/>，我們將竭誠為您服務!</h3>
+            <h4>想進一步瞭解a-lan-chen產品、服務，<br/>或有任何寶貴意見，都歡迎您與我們聯繫<br/>，我們將竭誠為您服務!</h4>
           </div>
 
           <div class="contactUs">
@@ -160,28 +130,11 @@
           
           <div class="container-contact">
             <a class="border-animation" href="mailto:georgia.wang@genesys-tech.com">
-              <div class="border-animation__inner">Welcome letter</div>
+              <div class="border-animation__inner">send mail</div>
             </a>
           </div>
 
           </div>
-          <!-- <div class="container container-button">
-            <div class="row">
-              <div class="image-farm">
-                <button type="button" class="btn btn-default btn-lg btn-block ">
-                  <a href="mailto:georgia.wang@genesys-tech.com" class="btn btn-secondary" style="width:100%; color:#000; outline:none;">歡迎來信</a>
-                </button>
-              </div>
-            </div>
-          </div> -->
-
-
-
-          <!-- <div class="row">
-            <div class="image-farm col-md-12 text-center">
-                <img src="imgs/IMG_0476.jpg" alt="農場介紹地圖">
-            </div>
-          </div> -->
 
         </div>
 
