the form multiple page switch

--- a/contact.html
+++ b/contact.html
@@ -117,24 +117,32 @@
 
 
     <!-- Contact Section -->
-    <section class="page-section pricing contact-all" id="contact" style="background-color: #e9edf0; ">
-        <div class="container-fluid contact-row wow fadeIn">
-          <div class="text-center">
+    <section class="page-section pricing contact-all" id="contact">
+        <div class="container contact-row">
+            <!-- send-mailBag -->
+          <div class="row text-center center-block send-mailBag">
+          <div class="col-md-12 text-center">
+
             <h2>聯絡我們</h2>
-            <hr class="colored">
-            <h4>想進一步瞭解a-lan-chen產品、服務，<br/>或有任何寶貴意見，都歡迎您與我們聯繫<br/>，我們將竭誠為您服務!</h4>
+            <hr class="colored" style="background-color:red;">
+            <p>
+              <h4>想進一步瞭解a-lan-chen產品、服務，或有任何寶貴意見，都歡迎您與我們聯繫，我們將竭誠為您服務!</h4>
+            </p>
+            
           </div>
 
-          <div class="contactUs">
+          <div class="col-md-12 contactUs">
 
-          
-          <div class="container-contact">
-            <a class="border-animation" href="mailto:georgia.wang@genesys-tech.com">
-              <div class="border-animation__inner">send mail</div>
-            </a>
+            <div class="container-contact">
+              <a class="border-animation" href="mailto:georgia.wang@genesys-tech.com">
+                <div class="border-animation__inner">send mail</div>
+              </a>
+            </div>
+
           </div>
 
-          </div>
+
+        </div>
 
         </div>
 
