--- a/course.html
+++ b/course.html
@@ -61,15 +61,17 @@
 
 
     <!-- course Section -->
-    <section class="section page-section" id="course">
+    <section class="section page-section pageSection " id="course">
       <div class="container text-center lession_icon">
         <div class="row course-center-vertical">
 
-        <div class="text-center wow fadeIn">
-          <h2>課程</h2>
-          <hr class="colored">
-        </div>
-        <div class="row">
+          <div class="col-md-12">
+            <div class="text-center wow fadeIn">
+              <h2>課程</h2>
+              <hr class="colored">
+            </div>
+          </div>
+        <!-- <div class="row"> -->
           <!-- course Item 1 -->
           <div class="col-lg-4 wow fadeIn" data-wow-delay=".2s">
             <div class="media">
@@ -132,7 +134,9 @@
               </div>
             </div>
           </div>
-        </div>
+        <!-- </div> -->
+
+
       </div><!-- row -->
       </div>
     </section>
