--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 <section id="sh" class="appear abouthome">
   <div class="container-fluid">
       <div class="row">
-          <img src="https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-369259.jpg" class="animation103 center-block animated fadeInUp img-responsive" style="width:100%; height:100vh;">
+          <div class="col-xs-6 col-md-12 index-img">
+              <!-- <img src="imgs/alanchen/2G0A9537.jpg" class="animation103 center-block animated fadeInUp" > -->
+          </div>
       </div>
   </div>
 </section>
